--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -54,7 +54,11 @@ jobs:
       -
         name: libxar
         run: |
+          echo "======================================"
           export LD_LIBRARY_PATH=/home/runner/work/osxcross/target/binaries/lib:$LD_LIBRARY_PATH
+          echo "======================================"
+          echo $LD_LIBRARY_PATH
+
       -
           # go get github.com/tpoechtrager/osxcross@latest
         name: go keychain
