--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,7 +12,7 @@ jobs:
       -
         name: GCC multilib
         run: |
-          sudo apt-file update
+          sudo apt-get update
           sudo apt-get install gcc-multilib g++-multilib clang apt-file
           ls /usr/local/bin
           echo "============================================"
