--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -13,7 +13,7 @@ jobs:
         name: GCC multilib
         run: |
           echo "================"
-          sudo apt-get update -y && apt-get install -y --no-install-recommends libssl1.0.0
+          sudo apt-get update -y && sudo apt-get install -y --no-install-recommends libssl1.0.0
           sudo apt-get update
           sudo apt-get install gcc-multilib g++-multilib clang apt-file
           sudo apt-file update
