--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,7 +12,9 @@ jobs:
       -
         name: GCC multilib
         run: |
-          echo "================"
+          
+          sudo apt list libssl*
+          echo "================" 
           sudo apt-get update -y && sudo apt-get install -y --no-install-recommends libssl1.0.0
           sudo apt-get update
           sudo apt-get install gcc-multilib g++-multilib clang apt-file
