--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -39,7 +39,7 @@ jobs:
           echo "================================="
           whereis libcrypto
           echo "================================="
-          ls usr/lib/x86_64-linux-gnu
+          ls usr/lib
           apt-file search libcrypto.so.1.0.0
 
           # git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
