--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,7 +42,8 @@ archives:
       - regen-linux-amd64
       # - regen-darwin-amd64
       - regen-darwin-arm64
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+      name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}"
+    # name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     wrap_in_directory: true
     format: zip
     files:
