--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,6 +24,9 @@ builds:
       - arm64
     goos:
       - darwin
+    env:
+      - CC=oa64-clang
+      - CXX=oa64-clang++
     # env:
     #   - LD_LIBRARY_PATH=/home/runner/work/osxcross/target/binaries/lib
     #   - CC=/home/runner/work/osxcross/target/binaries/bin/o64-clang
