--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -14,6 +14,8 @@ jobs:
         name: GCC multilib
         run: |
           sudo apt-get install gcc-multilib g++-multilib clang 
+          sudo apt-get install libcrypto++6 libssl1.1 libssl-dev --reinstall
+          ln -s  libcrypto.so.1.1 libcrypto.so.1.0.0
       -
         name: OSXCross for CGO Support
         run: |
