--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,11 +1,10 @@
 name: goreleaser
 
-on: [push]
-# on:
-#   pull_request:
-#   push:
-#     tags:
-#       - '*'
+on:
+ pull_request:
+ push:
+   tags:
+     - '*'
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
