find libcrypto file

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -15,6 +15,9 @@ jobs:
     #       echo "====================================="
           #     echo "====================================="
           # ls /usr/lib/x86_64-linux-gnu
+      -name: find libcrypto
+        run: |
+          whereis libcrypto.so.1.0.0
 
       -
         name: GCC multilib
