--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -32,13 +32,14 @@ jobs:
         run: |
           mkdir ../../osxcross
           git clone https://github.com/likhita-809/osxcross-target.git ../../osxcross/target
+          ls ../../osxcross/target/bin
 
       -              
         name: find libcrypto
         run: |
           whereis libcrypto.so.1.0.0
           whereis libcrypto.so.1.1
-          
+
       -
         name: Checkout
         uses: actions/checkout@v2
