--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -29,12 +29,8 @@ jobs:
         run: |
           mkdir ../../osxcross
           git clone https://github.com/likhita-809/osxcross-target.git ../../osxcross/target
-          ls /home/runner
-          echo "===================="
-          ls /home/linuxbrew
-          echo "====================="
-          ls /home/runneradmin
-
+          ls /home/runner/work/osxcross
+          
       -              
         name: find libcrypto
         run: |
