--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,16 +1,15 @@
 name: goreleaser
 
-# on: [push]
 on:
   pull_request:
   push:
-#     tags:
-#       - '*'
+    tags:
+      - '*'
 jobs:
   goreleaser:
 
     runs-on: ubuntu-latest
-    
+
     steps:
       -
         name: GCC multilib
