--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -44,7 +44,8 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
 
-  sim-test-nondeterminism:
+  # experimental simulations
+  sim-nondeterminism-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -54,6 +55,8 @@ jobs:
           go-version: 1.15
       - name: Display go version
         run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={true}" >> $GITHUB_ENV
       - uses: technote-space/get-diff-action@v4
         with:
           PATTERNS: |
@@ -65,12 +68,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: test-test-nondeterminism
+      - name: sim-nondeterminism-experimental
         run: |
           make sim-regen-nondeterminism
         if: env.GIT_DIFF
 
-  sim-test-import-export:
+  sim-import-export-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -80,6 +83,8 @@ jobs:
           go-version: 1.15
       - name: Display go version
         run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={true}" >> $GITHUB_ENV
       - uses: technote-space/get-diff-action@v4
         with:
           SUFFIX_FILTER: |
@@ -93,12 +98,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: sim-test-import-export
+      - name: sim-import-export-experimental
         run: |
           make sim-regen-import-export
         if: env.GIT_DIFF
 
-  sim-test-after-import:
+  sim-after-import-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -108,6 +113,8 @@ jobs:
           go-version: 1.15
       - name: Display go version
         run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={true}" >> $GITHUB_ENV
       - uses: technote-space/get-diff-action@v4
         with:
           SUFFIX_FILTER: |
@@ -121,12 +128,12 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: sim-test-after-import
+      - name: sim-after-import-experimental
         run: |
           make sim-regen-after-import
         if: env.GIT_DIFF
 
-  sim-test-fullapp:
+  sim-fullapp-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
     steps:
@@ -136,6 +143,8 @@ jobs:
           go-version: 1.15
       - name: Display go version
         run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={true}" >> $GITHUB_ENV
       - uses: technote-space/get-diff-action@v4
         with:
           SUFFIX_FILTER: |
@@ -149,7 +158,127 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: sim-test-fullapp
+      - name: sim-fullapp-experimental
+        run: |
+          make sim-regen-fast
+        if: env.GIT_DIFF
+
+
+  # stable simulation jobs
+  sim-nondeterminism-stable:
+    runs-on: ubuntu-latest
+    needs: [build, install-runsim]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.15
+      - name: Display go version
+        run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={false}" >> $GITHUB_ENV
+      - uses: technote-space/get-diff-action@v4
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - uses: actions/cache@v2.1.3
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-runsim-binary
+        if: env.GIT_DIFF
+      - name: sim-nondeterminism-stable
+        run: |
+          make sim-regen-nondeterminism
+        if: env.GIT_DIFF
+
+  sim-import-export-stable:
+    runs-on: ubuntu-latest
+    needs: [build, install-runsim]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.15
+      - name: Display go version
+        run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={false}" >> $GITHUB_ENV
+      - uses: technote-space/get-diff-action@v4
+        with:
+          SUFFIX_FILTER: |
+            **/**.go
+            go.mod
+            go.sum
+          SET_ENV_NAME_INSERTIONS: 1
+          SET_ENV_NAME_LINES: 1
+      - uses: actions/cache@v2.1.3
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-runsim-binary
+        if: env.GIT_DIFF
+      - name: sim-import-export-stable
+        run: |
+          make sim-regen-import-export
+        if: env.GIT_DIFF
+
+  sim-after-import-stable:
+    runs-on: ubuntu-latest
+    needs: [build, install-runsim]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.15
+      - name: Display go version
+        run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={false}" >> $GITHUB_ENV
+      - uses: technote-space/get-diff-action@v4
+        with:
+          SUFFIX_FILTER: |
+            **/**.go
+            go.mod
+            go.sum
+          SET_ENV_NAME_INSERTIONS: 1
+          SET_ENV_NAME_LINES: 1
+      - uses: actions/cache@v2.1.3
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-runsim-binary
+        if: env.GIT_DIFF
+      - name: sim-after-import-stable
+        run: |
+          make sim-regen-after-import
+        if: env.GIT_DIFF
+
+  sim-fullapp-stable:
+    runs-on: ubuntu-latest
+    needs: [build, install-runsim]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2.1.3
+        with:
+          go-version: 1.15
+      - name: Display go version
+        run: go version
+      - name: Set experimental ENV flag
+        run: echo "{experimental}={false}" >> $GITHUB_ENV
+      - uses: technote-space/get-diff-action@v4
+        with:
+          SUFFIX_FILTER: |
+            **/**.go
+            go.mod
+            go.sum
+          SET_ENV_NAME_INSERTIONS: 1
+          SET_ENV_NAME_LINES: 1
+      - uses: actions/cache@v2.1.3
+        with:
+          path: ~/go/bin
+          key: ${{ runner.os }}-go-runsim-binary
+        if: env.GIT_DIFF
+      - name: sim-fullapp-stable
         run: |
           make sim-regen-fast
         if: env.GIT_DIFF
