--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -48,6 +48,8 @@ jobs:
   sim-nondeterminism-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -66,9 +68,9 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
+      - name: Check env variable
+        run: echo "Experimental = $EXPERIMENTAL"
       - name: sim-nondeterminism-experimental
-        env:
-          experimental: true
         run: |
           make sim-regen-nondeterminism
         if: env.GIT_DIFF
