--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -68,8 +68,6 @@ jobs:
           path: ~/go/bin
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
-      - name: Check env variable
-        run: echo "Experimental = $EXPERIMENTAL"
       - name: sim-nondeterminism-experimental
         run: |
           make sim-regen-nondeterminism
@@ -78,6 +76,8 @@ jobs:
   sim-import-export-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -99,8 +99,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-import-export-experimental
-        env:
-          experimental: true
         run: |
           make sim-regen-import-export
         if: env.GIT_DIFF
@@ -108,6 +106,8 @@ jobs:
   sim-after-import-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -129,8 +129,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-after-import-experimental
-        env:
-          experimental: true
         run: |
           make sim-regen-after-import
         if: env.GIT_DIFF
@@ -138,6 +136,8 @@ jobs:
   sim-fullapp-experimental:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -159,8 +159,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-fullapp-experimental
-        env:
-          experimental: true
         run: |
           make sim-regen-fast
         if: env.GIT_DIFF
@@ -170,6 +168,8 @@ jobs:
   sim-nondeterminism-stable:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -189,8 +189,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-nondeterminism-stable
-        env:
-          experimental: false
         run: |
           make sim-regen-nondeterminism
         if: env.GIT_DIFF
@@ -198,6 +196,8 @@ jobs:
   sim-import-export-stable:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -219,8 +219,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-import-export-stable
-        env:
-          experimental: false
         run: |
           make sim-regen-import-export
         if: env.GIT_DIFF
@@ -228,6 +226,8 @@ jobs:
   sim-after-import-stable:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -249,8 +249,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-after-import-stable
-        env:
-          experimental: false
         run: |
           make sim-regen-after-import
         if: env.GIT_DIFF
@@ -258,6 +256,8 @@ jobs:
   sim-fullapp-stable:
     runs-on: ubuntu-latest
     needs: [build, install-runsim]
+    env:
+      EXPERIMENTAL: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2.1.3
@@ -279,8 +279,6 @@ jobs:
           key: ${{ runner.os }}-go-runsim-binary
         if: env.GIT_DIFF
       - name: sim-fullapp-stable
-        env:
-          experimental: false
         run: |
           make sim-regen-fast
         if: env.GIT_DIFF
