--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+project_name: regen-ledger
+
 env:
   - GO111MODULE=on
   - CGO_ENABLED=1
@@ -51,18 +53,27 @@ brews:
       - regen
     tap:
       owner: regen-network
-      name: homembrew-tap
+      name: regen-ledger
     homepage: "https://www.regen.network/"
     description: "Blockchain-powered marketplace for climate solutions and planetary regenerations"
     custom_block: |
       head "https://github.com/regen-network/regen-ledger.git"
     test: |
-      system "#{bin}/regen--version"
+      system "#{bin}/regen --version"
     install: |
       bin.install "regen"
+nfpms:
+- maintainer: regen-network
+  description: "Blockchain-powered marketplace for climate solutions and planetary regenerations"
+  homepage: https://github.com/likhita-809/regen-ledger
+  license: MIT
+  formats:
+  - deb
+  - rpm
+  - apk
 release:
   github:
     owner: regen-network
-    name: regen
+    name: regen-ledger
   prerelease: auto
   draft: false
