--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
   code_cov:
     name: Cover report
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config: ["stable-codecov", "experimental-codecov"]
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
@@ -31,11 +34,24 @@ jobs:
           go-version: 1.15
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: set experimental env
+        run: export EXPERIMENTAL=true
+        if: matrix.config == 'experimental-codecov'
       - name: run test cover
         run: make test-cover
-      - name: run experimental test cover
-        run: EXPERIMENTAL=true make test-cover
+      - name: filter out DONTCOVER
+        run: |
+          excludelist=" $(find ./ -type f -name '*.pb.go')"
+          excludelist+=" $(find ./ -type f -name '*.pb.gw.go')"
+          excludelist+="$(find ./ -type f -name '*.go' | xargs grep -l 'DONTCOVER')"
+          for filename in ${excludelist}; do
+          filename=$(echo $filename | sed 's/^./github.com\/regen-network\/regen-ledger/g')
+          echo "Excluding ${filename} from coverage report..."
+          sed -i.bak "/$(echo $filename | sed 's/\//\\\//g')/d" coverage.txt
+        if: env.GIT_DIFF
       - name: Upload codecov report
-        uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@v1.5.0
         with:
+          flags: ${{matrix.config}}
           file: coverage.txt
+        if: env.GIT_DIFF
