--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,9 @@ jobs:
     name: Cover report
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        config: ["stable-codecov", "experimental-codecov"]
+        envs: ["stable-codecov", "experimental-codecov"]
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
@@ -36,7 +37,7 @@ jobs:
         uses: actions/checkout@v2
       - name: set experimental env
         run: export EXPERIMENTAL=true
-        if: matrix.config == 'experimental-codecov'
+        if: matrix.envs == 'experimental-codecov'
       - name: run test cover
         run: make test-cover
       - name: filter out DONTCOVER
@@ -52,6 +53,6 @@ jobs:
       - name: Upload codecov report
       - uses: codecov/codecov-action@v1.5.0
         with:
-          flags: ${{matrix.config}}
+          flags: ${{matrix.envs}}
           file: coverage.txt
         if: env.GIT_DIFF
