--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,11 @@ jobs:
     name: Unit tests
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    strategy:
+      max-parallel: 1
+      fail-fast: false
+      matrix:
+        envs: ["stable-tests", "experimental-tests"]
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
@@ -17,10 +22,12 @@ jobs:
           go-version: 1.15
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: set experimental flags
+        if: matrix.envs == 'experimental-tests'
+        run: EXPERIMENTAL=true
       - name: run tests
         run: make test
-      - name: run experimental tests
-        run: EXPERIMENTAL=true make test
+        if: env.GIT_DIFF
   code_cov:
     name: Cover report
     runs-on: ubuntu-latest
@@ -40,8 +47,11 @@ jobs:
         run: export EXPERIMENTAL=true
       - name: run test cover
         run: make test-cover
+        if: env.GIT_DIFF
       - name: Upload codecov report
-        uses: codecov/codecov-action@v1.5.0
+        uses: codecov/codecov-action@v1
         with:
           flags: ${{matrix.envs}}
           file: coverage.txt
+        if: env.GIT_DIFF
+
