--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,13 @@ jobs:
         uses: actions/checkout@v2
       - name: run tests
         run: make test
+        if: env.GIT_DIFF
       - name: run experimental tests
         run: EXPERIMENTAL=true make test
+        if: env.GIT_DIFF
   code_cov:
     name: Cover report
+    needs: tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -39,7 +42,7 @@ jobs:
         if: matrix.envs == 'experimental-codecov'
         run: EXPERIMENTAL=true make test-cover
       - name: run stable test cover
-        if: matrix.envs == 'experimental-codecov'
+        if: matrix.envs == 'stable-codecov'
         run: EXPERIMENTAL=false make test-cover
       - name: Upload codecov report
         uses: codecov/codecov-action@v1
