--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -7,13 +7,23 @@
     },
     "apis": [
         {
-            "url": "./tmp-swagger-gen/regen/data/v1alpha2/query.swagger.json"
+            "url": "./tmp-swagger-gen/regen/data/v1alpha2/query.swagger.json",
         },
         {
-            "url": "./tmp-swagger-gen/regen/ecocredit/v1alpha1/query.swagger.json"
+            "url": "./tmp-swagger-gen/regen/ecocredit/v1alpha1/query.swagger.json",
+            "operationIds": {
+                "rename": {
+                  "Balance": "Ecocredit/Balance"
+                }
+              }
         },
         {
-            "url": "./tmp-swagger-gen/regen/group/v1alpha1/query.swagger.json"
+            "url": "./tmp-swagger-gen/regen/group/v1alpha1/query.swagger.json",
+            "operationIds": {
+                "rename": {
+                  "Proposal": "Group/Proposal"
+                }
+              }
         },
         {
             "url": "./client/docs/swagger.yaml",
