--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,15 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.15
+          go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v5
+        with:
+          PATTERNS: |
+            **/**.go
+            **/go.mod
+            **/go.sum
       - name: run tests
         run: make test
         if: env.GIT_DIFF
@@ -35,7 +41,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
         with:
-          go-version: 1.15
+          go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
       - name: run experimental test cover
