--- a/contrib/images/regen-env/Dockerfile
+++ b/contrib/images/regen-env/Dockerfile
@@ -4,15 +4,15 @@ RUN apt-get update && \
   apt-get -y upgrade && \
   apt-get -y install curl jq file
 
-ARG UID=1000
+ARG UID=1000 
 ARG GID=1000
 
 USER ${UID}:${GID}
-VOLUME [ /simd ]
-WORKDIR /simd
+VOLUME [ /regen ]
+WORKDIR /regen
 EXPOSE 26656 26657
-ENTRYPOINT ["/usr/bin/run.sh"]
+ENTRYPOINT ["/usr/bin/wrapper.sh"]
 CMD ["start"]
 STOPSIGNAL SIGTERM
 
-COPY run.sh /usr/bin/run.sh
+COPY wrapper.sh /usr/bin/wrapper.sh
