--- a/contrib/images/regen-env/Dockerfile
+++ b/contrib/images/regen-env/Dockerfile
@@ -8,11 +8,11 @@ ARG UID=1000
 ARG GID=1000
 
 USER ${UID}:${GID}
-VOLUME [ /regen ]
+VOLUME [ "/regen" ]
 WORKDIR /regen
 EXPOSE 26656 26657
 ENTRYPOINT ["/usr/bin/wrapper.sh"]
-CMD ["start"]
+CMD ["start", "--log_format", "plain"]
 STOPSIGNAL SIGTERM
 
 COPY wrapper.sh /usr/bin/wrapper.sh
