--- a/buf.yaml
+++ b/buf.yaml
@@ -10,6 +10,7 @@ lint:
   except:
     - SERVICE_SUFFIX
     - RPC_REQUEST_STANDARD_NAME
+    - RPC_REQUEST_RESPONSE_UNIQUE
   ignore:
     - cosmos
     - gogoproto
