--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,10 @@ jobs:
   tests:
     name: Unit tests
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        envs: ["stable-tests", "experimental-tests"]
     steps:
       - name: Install Go
         uses: actions/setup-go@v2.1.3
@@ -17,12 +20,19 @@ jobs:
           go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: run tests
-        run: make test
-        if: env.GIT_DIFF
+      - uses: technote-space/get-diff-action@v5
+        id: git_diff
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
       - name: run experimental tests
+        if: env.GIT_DIFF && matrix.envs == 'experimental-tests'
         run: EXPERIMENTAL=true make test
-        if: env.GIT_DIFF
+      - name: run stable tests
+        if: env.GIT_DIFF && matrix.envs == 'stable-tests'
+        run: EXPERIMENTAL=false make test
   code_cov:
     name: Cover report
     needs: tests
