--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,52 @@ jobs:
             **/**.go
             go.mod
             go.sum
-      - name: run experimental tests
+      - name: run experimental test & create coverage
+        run: |
+            SUBMODULES=$(find . -type f -name 'go.mod' -print0 | xargs -0 -n1 dirname | sort)
+            CURDIR=$(pwd)
+            for m in ${SUBMODULES[@]}; do
+                cd $CURDIR/$m
+                PKGS=$(go list ./...)
+                coverage_prefix=$(echo "$m" | sed -r 's/[xyz]+/_/g')
+                for pkg in ${PKGS[@]}; do
+                    go test -v -timeout 30m -race -coverpkg=all -coverprofile=profile.out -covermode=atomic -tags="ledger test_ledger_mock experimental" "$pkg"
+                    if [ -f profile.out ]; then
+                        tail -n +2 profile.out >> experimental/${{ coverage_prefix }}coverage.txt;
+                        rm profile.out
+                    fi
+                done
+            done
+
         if: env.GIT_DIFF && matrix.envs == 'experimental-tests'
-        run: EXPERIMENTAL=true make test
-      - name: run stable tests
+      - name: run stable test & create coverage
+        run: |
+            SUBMODULES=$(find . -type f -name 'go.mod' -print0 | xargs -0 -n1 dirname | sort)
+            CURDIR=$(pwd)
+            for m in ${SUBMODULES[@]}; do
+                cd $CURDIR/$m
+                PKGS=$(go list ./...)
+                coverage_prefix=$(echo "$m" | sed -r 's/[xyz]+/_/g')
+                for pkg in ${PKGS[@]}; do
+                    go test -v -timeout 30m -race -coverpkg=all -coverprofile=profile.out -covermode=atomic -tags="ledger test_ledger_mock" "$pkg"
+                    if [ -f profile.out ]; then
+                        tail -n +2 profile.out >> stable/${{ coverage_prefix }}coverage.txt;
+                        rm profile.out
+                    fi
+                done
+            done
         if: env.GIT_DIFF && matrix.envs == 'stable-tests'
-        run: EXPERIMENTAL=false make test
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "experimental-coverage"
+          path: ./experimental
+          if: env.GIT_DIFF && matrix.envs == 'experimental-tests'
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "stable-coverage"
+          path: ./stable
+          if: env.GIT_DIFF && matrix.envs == 'stable-tests'
+        
   code_cov:
     name: Cover report
     needs: tests
