--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -7,15 +7,18 @@
     },
     "apis": [
         {
-            "url": "./tmp-swagger-gen/regen/data/v1alpha2/query.swagger.json",
+            "url": "./tmp-swagger-gen/regen/data/v1alpha2/query.swagger.json"
         },
         {
-            "url": "./tmp-swagger-gen/regen/ecocredit/v1alpha1/query.swagger.json",
+            "url": "./tmp-swagger-gen/regen/ecocredit/v1alpha2/query.swagger.json",
             "operationIds": {
                 "rename": {
                   "Balance": "Ecocredit/Balance",
                   "Params": "Ecocredit/Params"
                 }
+              },
+              "dereference": {
+                "circular": "ignore"
               }
         },
         {
