--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,13 @@ jobs:
           go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v6.0.1
+        id: git_diff
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
       - name: run tests
         run: make test
         if: env.GIT_DIFF
@@ -38,14 +45,45 @@ jobs:
           go-version: 1.17
       - name: Checkout code
         uses: actions/checkout@v2
+      - uses: technote-space/get-diff-action@v6.0.1
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
       - name: run experimental test cover
-        if: matrix.envs == 'experimental-codecov'
+        if: env.GIT_DIFF && matrix.envs == 'experimental-codecov'
         run: EXPERIMENTAL=true make test-cover
       - name: run stable test cover
-        if: matrix.envs == 'stable-codecov'
+        if: env.GIT_DIFF && matrix.envs == 'stable-codecov'
         run: EXPERIMENTAL=false make test-cover
       - name: Upload codecov report
         uses: codecov/codecov-action@v1
         with:
           flags: ${{matrix.envs}}
           file: coverage.txt
+        if: env.GIT_DIFF
+
+  liveness-test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2.1.5
+        with:
+          go-version: 1.17
+      - uses: technote-space/get-diff-action@v6.0.1
+        id: git_diff
+        with:
+          PATTERNS: |
+            **/**.go
+            go.mod
+            go.sum
+      - name: start localnet
+        run: |
+          make clean localnet-start
+        if: env.GIT_DIFF
+      - name: test liveness
+        run: |
+          ./contrib/localnet_liveness.sh 100 5 50 localhost
+        if: env.GIT_DIFF
