temp: remove diff check

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,17 +27,16 @@ jobs:
           github-token: ${{ secrets.github_token }}
         if: env.GIT_DIFF
 
-
   proto-lint:
     name: golangci-lint
     runs-on: ubuntu-latest
     timeout-minutes: 6
     steps:
       - uses: actions/checkout@v2
-      - uses: technote-space/get-diff-action@v4
-        with:
-          PATTERNS: |
-            proto/**/*.proto
+      # - uses: technote-space/get-diff-action@v4
+      #   with:
+      #     PATTERNS: |
+      #       proto/**/*.proto
       - uses: golangci/golangci-lint-action@master
         with:
           version: v1.28
